modfed and added ansible files

--- a/Ansible/ansible.cfg
+++ b/Ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./inventory/aws_ec2.yaml
 remote_user = ubuntu
-private_key_file = ~/.ssh/jenkins-key.pem
+private_key_file = /Users/macbookpro/Library/CloudStorage/OneDrive-EvokeTechnologiesPrivateLimited/workspace/AWS_devops/jenkins-key.pem
 host_key_checking = False
 gathering = smart
 roles_path = roles
