--- a/Ansible/inventory/aws_ec2.yaml
+++ b/Ansible/inventory/aws_ec2.yaml
@@ -1,4 +1,4 @@
-plugin: aws_ec2
+plugin: amazon.aws.aws_ec2
 regions:
   - ap-south-1
 
@@ -12,7 +12,6 @@ filters:
     - "jenkins-slave"
     - "kubemaster"
     - "kubenode1"
-
 
 compose:
   ansible_host: public_ip_address
